--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,7 +130,7 @@
 
             // Send the image to the backend for prediction
             try {
-                const response = await fetch('http://127.0.0.1:5000/predict/', {
+                const response = await fetch('https://wildecho-watch.onrender.com', {
                     method: 'POST',
                     body: formData,
                 });
