--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,14 +32,13 @@
         }
 
         .container {
-            background-color: rgba(255, 255, 255, 0.85); /* White background with transparency */
+            background-color: rgba(255, 255, 255, 0.85);
             border-radius: 15px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             width: 100%;
             max-width: 600px;
             text-align: center;
-            transform: translateY(-30px); /* Adds a little floating effect */
         }
 
         .container input[type="file"] {
@@ -81,11 +80,6 @@
             display: inline-block;
             width: 100%;
             max-width: 500px;
-            transition: all 0.3s ease-in-out;
-        }
-
-        #result p {
-            margin: 5px 0;
         }
 
         #result p.no-animal {
@@ -98,16 +92,6 @@
             color: #4CAF50;
             font-weight: bold;
             font-size: 1.3em;
-        }
-
-        /* Add a subtle animation to the result container */
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        #result {
-            animation: fadeIn 1s ease-in-out;
         }
     </style>
 </head>
@@ -126,24 +110,27 @@
         async function uploadImage() {
             const formData = new FormData();
             const imageFile = document.getElementById('image').files[0];
+
+            if (!imageFile) {
+                alert("Please select an image first.");
+                return;
+            }
+
             formData.append("file", imageFile);
 
-            // Send the image to the backend for prediction
             try {
-                const response = await fetch('https://wildecho-watch.onrender.com', {
+                const response = await fetch('https://wildecho-watch.onrender.com/predict/', {  // <-- Corrected URL
                     method: 'POST',
-                    body: formData,
+                    body: formData
                 });
 
-                // Handle non-200 status codes (errors)
                 if (!response.ok) {
                     throw new Error('Failed to get response from backend');
                 }
 
                 const data = await response.json();
-                console.log(data); // Log the response for debugging
+                console.log(data);
 
-                // Check if animals are detected and display the result
                 const resultDiv = document.getElementById('result');
                 if (data.animals_detected && data.animals_detected.length > 0) {
                     const animalList = data.animals_detected.map(animal => {
