--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,147 +5,179 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Detection</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(45deg, rgba(72, 98, 168, 0.7), rgba(48, 96, 124, 0.7)), url('https://images.unsplash.com/photo-1561948950-bffb82d3884a') no-repeat center center fixed;
-            background-size: cover;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            text-align: center;
+            background: linear-gradient(to right, #1e3c72, #2a5298); /* Cool gradient background */
+            color: white;
+            margin: 0;
             height: 100vh;
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 3em;
-            color: #fff;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .container {
-            background-color: rgba(255, 255, 255, 0.85);
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            padding: 30px;
             border-radius: 15px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            width: 100%;
-            max-width: 600px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            width: 400px;
             text-align: center;
+            animation: fadeIn 1s ease-in-out;
         }
 
-        .container input[type="file"] {
-            font-size: 1.2em;
-            padding: 12px;
-            margin: 10px 0;
-            border: 2px solid #ccc;
-            border-radius: 8px;
-            width: 100%;
-            background-color: #f0f0f0;
-            color: #333;
+        h2 {
+            margin-bottom: 15px;
         }
 
-        .container button {
-            background-color: #4CAF50;
-            color: white;
-            font-size: 1.2em;
-            padding: 14px 28px;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
+        .upload-container {
             margin-top: 20px;
-            transition: background-color 0.3s ease;
-            width: 100%;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            color: black;
         }
 
-        .container button:hover {
-            background-color: #45a049;
+        .custom-file-upload {
+            border: 2px dashed #4CAF50;
+            display: inline-block;
+            padding: 10px;
+            cursor: pointer;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: all 0.3s;
+        }
+
+        .custom-file-upload:hover {
+            background: #4CAF50;
+            color: white;
+        }
+
+        #imageInput {
+            display: none;
+        }
+
+        button {
+            margin-top: 15px;
+            padding: 10px 20px;
+            border: none;
+            background: #ff9800;
+            color: white;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        button:hover {
+            background: #e68900;
         }
 
         #result {
             margin-top: 20px;
-            font-size: 1.2em;
-            padding: 20px;
-            background-color: #fff;
-            color: #333;
-            border-radius: 10px;
-            border: 1px solid #ddd;
-            display: inline-block;
-            width: 100%;
-            max-width: 500px;
+            font-size: 18px;
+            font-weight: bold;
+            white-space: pre-wrap;
+            text-align: center;
+            background: #fff;
+            color: black;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+            min-width: 300px;
+            display: none; /* Hide initially */
+            animation: fadeIn 0.5s ease-in-out;
         }
 
-        #result p.no-animal {
-            color: #f44336;
-            font-weight: bold;
-            font-size: 1.3em;
+        /* Loader animation */
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #3498db;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 20px auto;
+            display: none; /* Hide initially */
         }
 
-        #result p.animal-detected {
-            color: #4CAF50;
-            font-weight: bold;
-            font-size: 1.3em;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-
     <div class="container">
-        <h1>Animal Detection</h1>
-
-        <input type="file" id="image" accept="image/*">
-        <button onclick="uploadImage()">Detect Animals</button>
-
+        <h2>🐾 Animal Detection 🐾</h2>
+        <div class="upload-container">
+            <label class="custom-file-upload">
+                Select an Image
+                <input type="file" id="imageInput" accept="image/*">
+            </label>
+            <button onclick="uploadImage()">Detect Animal</button>
+        </div>
+        <div class="loader" id="loader"></div> <!-- Loader -->
         <div id="result"></div>
     </div>
 
     <script>
-        async function uploadImage() {
-            const formData = new FormData();
-            const imageFile = document.getElementById('image').files[0];
-
-            if (!imageFile) {
-                alert("Please select an image first.");
+        function uploadImage() {
+            const input = document.getElementById('imageInput');
+            if (!input.files.length) {
+                alert('Please select an image first.');
                 return;
             }
 
-            formData.append("file", imageFile);
+            const formData = new FormData();
+            formData.append('file', input.files[0]);
 
-            try {
-                const response = await fetch('https://wildecho-watch.onrender.com/predict/', {  // <-- Corrected URL
-                    method: 'POST',
-                    body: formData
-                });
+            const loader = document.getElementById('loader');
+            const resultDiv = document.getElementById('result');
 
-                if (!response.ok) {
-                    throw new Error('Failed to get response from backend');
-                }
+            // Show loader and hide result
+            loader.style.display = 'block';
+            resultDiv.style.display = 'none';
 
-                const data = await response.json();
-                console.log(data);
+            fetch('http://127.0.0.1:5000/predict', { 
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                loader.style.display = 'none'; // Hide loader
+                resultDiv.style.display = 'block'; // Show result
+                resultDiv.innerHTML = "";
 
-                const resultDiv = document.getElementById('result');
-                if (data.animals_detected && data.animals_detected.length > 0) {
-                    const animalList = data.animals_detected.map(animal => {
-                        return `<p class="animal-detected">Detected: ${animal.type} with ${Math.round(animal.confidence * 100)}% confidence</p>`;
-                    }).join('');
-                    resultDiv.innerHTML = animalList;
+                if (data.error) {
+                    resultDiv.innerText = `Error: ${data.error}`;
+                } else if (data.animals_detected.length === 0) {
+                    resultDiv.innerText = "No animals detected.";
                 } else {
-                    resultDiv.innerHTML = '<p class="no-animal">No animals detected.</p>';
+                    resultDiv.innerHTML = "<strong>Detected Animals:</strong><br><br>" + 
+                        data.animals_detected.map(animal => 
+                            ` <strong>Type:</strong> ${animal.type}, <strong>Confidence:</strong> ${animal.confidence}%`
+                        ).join("<br>");
                 }
-            } catch (error) {
+            })
+            .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('result').innerHTML = '<p class="no-animal">Error processing the image.</p>';
-            }
+                loader.style.display = 'none'; // Hide loader
+                resultDiv.style.display = 'block'; // Show result
+                resultDiv.innerText = 'Error detecting animal.';
+            });
         }
     </script>
-
 </body>
 </html>
