--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,13 +8,14 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background: linear-gradient(to right, #1e3c72, #2a5298); /* Cool gradient background */
+            background: linear-gradient(to right, #1e3c72, #2a5298);
             color: white;
             margin: 0;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
         }
 
         .container {
@@ -23,130 +24,88 @@
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-            width: 400px;
+            width: 450px;
             text-align: center;
-            animation: fadeIn 1s ease-in-out;
         }
 
-        h2 {
-            margin-bottom: 15px;
-        }
+        h2 { margin-bottom: 15px; }
 
-        .upload-container {
-            margin-top: 20px;
-            background: white;
-            padding: 20px;
+        #video {
+            width: 100%;
+            max-width: 400px;
+            margin-top: 10px;
             border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-            color: black;
-        }
-
-        .custom-file-upload {
-            border: 2px dashed #4CAF50;
-            display: inline-block;
-            padding: 10px;
-            cursor: pointer;
-            font-weight: bold;
-            border-radius: 5px;
-            transition: all 0.3s;
-        }
-
-        .custom-file-upload:hover {
-            background: #4CAF50;
-            color: white;
-        }
-
-        #imageInput {
-            display: none;
-        }
-
-        button {
-            margin-top: 15px;
-            padding: 10px 20px;
-            border: none;
-            background: #ff9800;
-            color: white;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        button:hover {
-            background: #e68900;
         }
 
         #result {
             margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
-            white-space: pre-wrap;
-            text-align: center;
             background: #fff;
             color: black;
             padding: 15px;
             border-radius: 5px;
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-            min-width: 300px;
-            display: none; /* Hide initially */
-            animation: fadeIn 0.5s ease-in-out;
+            display: none;
         }
 
-        /* Loader animation */
         .loader {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #3498db;
+            display: none;
+            margin: 20px auto;
+            border: 5px solid #f3f3f3;
+            border-top: 5px solid #3498db;
             border-radius: 50%;
             width: 40px;
             height: 40px;
             animation: spin 1s linear infinite;
-            margin: 20px auto;
-            display: none; /* Hide initially */
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        @keyframes spin { 
+            0% { transform: rotate(0deg); } 
+            100% { transform: rotate(360deg); } 
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h2>🐾 Animal Detection 🐾</h2>
-        <div class="upload-container">
-            <label class="custom-file-upload">
-                Select an Image
-                <input type="file" id="imageInput" accept="image/*">
-            </label>
-            <button onclick="uploadImage()">Detect Animal</button>
-        </div>
-        <div class="loader" id="loader"></div> <!-- Loader -->
+        <video id="video" autoplay></video>
+        <div class="loader" id="loader"></div>
         <div id="result"></div>
     </div>
 
     <script>
-        function uploadImage() {
-            const input = document.getElementById('imageInput');
-            if (!input.files.length) {
-                alert('Please select an image first.');
-                return;
-            }
+        let videoStream = null;
 
-            const formData = new FormData();
-            formData.append('file', input.files[0]);
+        function startCamera() {
+            const video = document.getElementById('video');
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then(stream => {
+                    videoStream = stream;
+                    video.srcObject = stream;
+                    setInterval(captureImage, 15000); // Automatically capture image every 3 seconds
+                })
+                .catch(error => console.error("Camera Error:", error));
+        }
 
+        function captureImage() {
+            const video = document.getElementById('video');
+            const canvas = document.createElement('canvas');
+            canvas.width = video.videoWidth;
+            canvas.height = video.videoHeight;
+            const context = canvas.getContext('2d');
+            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+            canvas.toBlob(blob => {
+                sendImage(blob);
+            }, 'image/jpeg');
+        }
+
+        function sendImage(imageBlob) {
             const loader = document.getElementById('loader');
             const resultDiv = document.getElementById('result');
+            const formData = new FormData();
+            formData.append('file', imageBlob);
 
-            // Show loader and hide result
             loader.style.display = 'block';
             resultDiv.style.display = 'none';
 
@@ -156,14 +115,12 @@
             })
             .then(response => response.json())
             .then(data => {
-                loader.style.display = 'none'; // Hide loader
-                resultDiv.style.display = 'block'; // Show result
+                loader.style.display = 'none';
+                resultDiv.style.display = 'block';
                 resultDiv.innerHTML = "";
 
-                if (data.error) {
-                    resultDiv.innerText = `Error: ${data.error}`;
-                } else if (data.animals_detected.length === 0) {
-                    resultDiv.innerText = "No animals detected.";
+                if (!data.animals_detected || data.animals_detected.length === 0) {
+                    resultDiv.innerText = "No animals detected with high confidence.";
                 } else {
                     resultDiv.innerHTML = "<strong>Detected Animals:</strong><br><br>" + 
                         data.animals_detected.map(animal => 
@@ -173,11 +130,13 @@
             })
             .catch(error => {
                 console.error('Error:', error);
-                loader.style.display = 'none'; // Hide loader
-                resultDiv.style.display = 'block'; // Show result
+                loader.style.display = 'none';
+                resultDiv.style.display = 'block';
                 resultDiv.innerText = 'Error detecting animal.';
             });
         }
+
+        startCamera();
     </script>
 </body>
 </html>
