--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,7 +109,7 @@
             loader.style.display = 'block';
             resultDiv.style.display = 'none';
 
-            fetch('http://127.0.0.1:5000/predict', { 
+            fetch('https://wildecho-watch.onrender.com/predict', { 
                 method: 'POST',
                 body: formData
             })
